--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,21 +1,17 @@
 env:
   browser: true
+  commonjs: true
   es2020: true
-extends:
-  - 'eslint:recommended'
-  - 'plugin:vue/essential'
+extends: 'eslint:recommended'
 parserOptions:
   ecmaVersion: 11
-  sourceType: module
-plugins:
-  - vue
 rules:
+  no-useless-catch: 'off'
+  no-undef: 'off'
   indent:
     - error
     - tab
-  linebreak-style:
-    - error
-    - windows
+  linebreak-style: 'off'
   quotes:
     - error
     - single
