--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.6.1",
+    "darkmode-js": "^1.5.6",
     "gridsome": "^0.7.20",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.0"
