--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,16 +1,24 @@
+root: true
 env:
   browser: true
   commonjs: true
   es2020: true
-extends: 'eslint:recommended'
+extends:
+  - 'eslint:recommended'
+  - 'plugin:vue/essential'
 parserOptions:
   ecmaVersion: 11
 rules:
   no-useless-catch: 'off'
   no-undef: 'off'
   indent:
-    - error
-    - tab
+    - 'error'
+    - 2
+  eqeqeq:
+    - 'error'
+    - 'always'
+  camelcase:
+    - 'error'
   linebreak-style: 'off'
   quotes:
     - error
