--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "opendevs-preview": "gridsome develop -p 8080 --host 0.0.0.0",
     "commit-a": "git add . && git cz",
     "commit": "git cz",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.6.1",
     "darkmode-js": "^1.5.6",
+    "gh-pages": "^3.1.0",
     "gridsome": "^0.7.20",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.0"
@@ -24,9 +27,9 @@
   "devDependencies": {
     "@vue/cli-plugin-eslint": "^4.5.4",
     "@vue/cli-service": "^4.5.4",
-    "eslint-plugin-import": "^2.22.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.8.0",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-vue": "^6.2.2",
     "git-cz": "^4.7.0"
   },
