--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.6.2",
-    "darkmode-js": "^1.5.6",
+    "bowser": "^2.11.0",
     "gh-pages": "^3.1.0",
     "gridsome": "^0.7.20",
     "node-sass": "^4.14.1",
