--- a/package.json
+++ b/package.json
@@ -17,26 +17,30 @@
   },
   "dependencies": {
     "@gridsome/source-filesystem": "^0.6.2",
-    "@gridsome/transformer-remark": "^0.6.2",
+    "@gridsome/transformer-remark": "^0.6.3",
     "bowser": "^2.11.0",
     "gh-pages": "^3.1.0",
-    "gridsome": "^0.7.20",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^10.0.0"
+    "gridsome": "^0.7.21"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-brands-svg-icons": "^5.14.0",
-    "@fortawesome/free-regular-svg-icons": "^5.14.0",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^2.0.0",
-    "@vue/cli-plugin-eslint": "^4.5.4",
-    "@vue/cli-service": "^4.5.4",
+    "@gridsome/plugin-sitemap": "^0.4.0",
+    "@vue/cli-plugin-eslint": "^4.5.8",
+    "@vue/cli-service": "^4.5.8",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.8.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "git-cz": "^4.7.0"
+    "eslint": "^7.12.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-vue": "^7.1.0",
+    "git-cz": "^4.7.1",
+    "gridsome-plugin-tailwindcss": "^3.0.1",
+    "hex-to-rgb": "1.0.1",
+    "postcss-selector-parser": "6.0.4",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.0.5"
   },
   "keywords": [
     "gridsome",
