--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -21,9 +21,7 @@ rules:
   camelcase:
     - 'error'
   linebreak-style: 'off'
-  quotes:
-    - error
-    - single
+  quotes: 'off'
   semi:
     - error
     - always
