feat: 🎸 Portfolio feature in ALPHA
this release includes changes for global portfolio

BREAKING CHANGE: 🧨 NA

✅ Closes: NA

--- a/package.json
+++ b/package.json
@@ -55,6 +55,6 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Open-Devs/opendevs"
+    "url": "https://github.com/open-devs/opendevs"
   }
 }
