docs: ✏️ relax a little added
this commit adds post for relax a little while updating the package
dependencies

--- a/src/assets/content/data/config.json
+++ b/src/assets/content/data/config.json
@@ -3,8 +3,8 @@
   "description": "An organization of motivated developers, building open source enterprise level softwares to contribute to community",
   "contact": {
     "email": "open.devs.github@gmail.com",
-    "github_handle": "Open-Devs"
+    "github_handle": "open-devs"
   },
   "primary_color": "#ACCAC5",
-  "repository_url": "https://github.com/Open-Devs"
+  "repository_url": "https://github.com/open-devs"
 }
