--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -14,15 +14,15 @@ jobs:
         uses: actions/checkout@v2.3.1
 
       - name: NPM setup
-      - uses: actions/setup-node@v1
+        uses: actions/setup-node@v1
         with:
           node-version: "14"
 
       - name: Dependencies install
-      - run: yarn install --frozen-lockfile
+        run: yarn install --frozen-lockfile
 
       - name: Project build
-      - run: yarn run build
+        run: yarn run build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
