--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy:
     name: Deploy
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
@@ -16,7 +16,7 @@ jobs:
       - name: NPM setup
         uses: actions/setup-node@v1
         with:
-          node-version: "14"
+          node-version: "14.x"
 
       - name: Dependencies install
         run: yarn install --frozen-lockfile
