ci: 🎡 rsync addition for deploy
this commit adds rsync & also reverts to using ubuntu latest for
deployment

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -24,6 +24,10 @@ jobs:
       - name: Project build
         run: yarn run build
 
+      - name: Install rsync 📚
+        run: |
+          apt-get update && apt-get install -y rsync
+
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
