ci: 🎡 sudo for ci env

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Install rsync 📚
         run: |
-          apt-get update && apt-get install -y rsync
+          sudo apt-get update && apt-get install -y rsync
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
