--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
     "autoprefixer": "^9",
     "bowser": "^2.11.0",
+    "emailjs-com": "^2.6.4",
     "gridsome": "^0.7.23",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
