--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^9",
     "bowser": "^2.11.0",
     "emailjs-com": "^2.6.4",
+    "googleapis": "^39.2.0",
     "gridsome": "^0.7.23",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
