--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.20.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^7.6.0",
     "gh-pages": "^3.1.0",
     "git-cz": "^4.7.6",
