docs: ✏️ blogs addition & footer improvements
this commit made blogs footers more consistent while adding new blog

BREAKING CHANGE: 🧨 NA

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -25,6 +25,9 @@ jobs:
         run: yarn run build
         env:
           GRIDSOME_SHEET_BEST_URL: ${{ secrets.GRIDSOME_SHEET_BEST_URL }}
+          GRIDSOME_EMAILJS_SERVICE_ID: ${{ secrets.GRIDSOME_EMAILJS_SERVICE_ID }}
+          GRIDSOME_EMAILJS_TEMPLATE_ID: ${{ secrets.GRIDSOME_EMAILJS_TEMPLATE_ID }}
+          GRIDSOME_EMAILJS_USER_ID: ${{ secrets.GRIDSOME_EMAILJS_USER_ID }}
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
